Terraform/terraform/Modules/ALB/main.tf
resource "aws_lb" "ids-alb" {
  name               = var.alb_name
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb_sg.id]
  subnets            = [for subnet in aws_subnet.public : subnet.id]

  tags = {
    Environment = var.environment
    Name        = var.alb_name
  }
}
